TA-1569 fixed css layout issues, added tab index functionality

--- a/src/client/components/atoms/search-info-panel/search-info-panel.scss
+++ b/src/client/components/atoms/search-info-panel/search-info-panel.scss
@@ -29,6 +29,6 @@
   }
   @include grid-media($sba-grid-large) {
     border-bottom: 3px white solid;
-    padding: 25px 30px 20px;
+    padding: 15px 30px;
   }
 }
